--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+<!--        引入单元测试-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
 
     <build>
